<resources>
    <string name="app_name">海螺音乐</string>
    <string name="app_name_en">CONCH PLAYER</string>


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="display_name">昵称</string>
    <string name="captcha">验证码</string>
    <!-- 错误信息 -->

    <string name="track_title">标题</string>
    <string name="track_artist">作者</string>

    <string name="title_local">本地</string>
    <string name="title_cloud">云端</string>
    <string name="title_account">我的</string>
    <string name="email_example">xxxxx@example.com</string>
    <string name="recent_playlist">最近播放</string>
    <string name="my_playlist">我的歌单</string>


    <string name="mode_repeat">列表循环</string>
    <string name="mode_repeat_one">单曲循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="more">详细信息</string>

    <!-- Notification Channel -->
    <string name="notification_channel">正在播放</string>
    <string name="notification_channel_description">展示海螺音乐当前播放歌曲</string>

    <string name="queue_track">播放队列</string>
    <string name="favorite_tracks">我喜欢的音乐</string>
    <string name="local_user">本地用户</string>
    <string name="title_favorite_music">我喜欢的音乐</string>


    <string name="playlist">歌单</string>
    <string name="no_recent_play">无最近播放</string>
    <string name="playlist_title">歌单标题</string>
    <string name="playlist_description">歌单描述信息</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="title_delete">删除</string>
    <string name="track_size">文件大小</string>
    <string name="action_sync">同步</string>
    <string name="playlist_favorite">我喜欢的</string>

    <!-- Hint -->
    <string name="wrong_email">邮箱格式错误</string>
    <string name="list_refresh_over">列表已更新</string>
    <string name="empty_playlist_title_error">标题不能为空</string>
    <string name="hint_no_more_content">没有更多内容了</string>
    <string name="playlist_has_nothing">该歌单中没有歌曲</string>
    <string name="no_track">没有歌曲</string>
    <string name="playlist_default">默认歌单</string>
    <string name="user">用户</string>
    <string name="confirm_exchange">确认修改</string>

    <string name="hint_password_confirm_failed">新密码和重复密码不一致</string>
    <string name="hint_password_too_short">密码不应少于8位</string>
    <string name="apply_exchange">提交修改</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="exit">退出登录</string>
    <string name="track_favorite">我喜欢的歌曲</string>
    <string name="hint_empty_old_password">旧密码不能为空</string>
    <string name="title_playlist_play">歌单播放</string>

</resources>