<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_playlist_play"
        android:icon="@drawable/ic_playlist_play"
        android:iconTint="@color/white"
        android:title="@string/title_playlist_play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_outline"
        android:iconTint="@color/white"
        android:title="@string/title_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_vert"
        android:iconTint="@color/white"
        android:title="@string/more"
        app:showAsAction="always" />

</menu>