<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_local">

    <fragment
        android:id="@+id/navigation_local"
        android:name="com.example.conch.ui.main.local.LocalFragment"
        android:label="@string/title_local"
        tools:layout="@layout/fragment_local" />

    <fragment
        android:id="@+id/navigation_cloud"
        android:name="com.example.conch.ui.main.cloud.CloudFragment"
        android:label="@string/title_cloud"
        tools:layout="@layout/fragment_cloud" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.conch.ui.main.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>