<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity"
        tools:ignore="Autofill,TextFields">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/ic_conch_blue900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name_en"
            android:textColor="@color/blue_900"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
            app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="64dp"
            app:boxCornerRadiusBottomEnd="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/login_text_box_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintVertical_bias="0.05"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusBottomEnd="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/login_text_box_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/login_text_box_corner_radius"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout1"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/login"
            android:textStyle="bold"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/windowBackground"
            android:padding="16dp"
            android:text="@string/register"
            android:textColor="@color/primary_text"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>