<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="142dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".ui.main.account.AccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/playlist_favorite_shape"
                android:clickable="true"
                android:padding="8dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_user_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/account_head_portrait"
                    android:layout_width="@dimen/head_portrait_size"
                    android:layout_height="@dimen/head_portrait_size"
                    android:src="@drawable/ic_account_box"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/account_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/local_user"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/center_user_guideline"
                    app:layout_constraintStart_toEndOf="@+id/account_head_portrait" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/account_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email_example"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/normal_text_size"
                    android:padding="8dp"
                    app:layout_constraintStart_toEndOf="@+id/account_username"
                    app:layout_constraintStart_toStartOf="@+id/account_username"
                    app:layout_constraintTop_toBottomOf="@+id/account_username" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/account_to_login_or_user_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_login"
                    app:layout_constraintBottom_toTopOf="@+id/center_user_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/center_user_guideline" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.internal.BaselineLayout
                android:id="@+id/baselineLayout"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="16dp"
                android:alpha="0.25"
                android:background="@color/divider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_to_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/playlist_favorite_shape"
                android:clickable="true"
                android:padding="16dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_playlist_favorite_cover"
                    android:layout_width="@dimen/big_play_icon_size"
                    android:layout_height="@dimen/big_play_icon_size"
                    android:src="@drawable/ic_favorite_border_blue900_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/itemPlaylistImageStyle" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="2dp"
                    android:text="@string/playlist_favorite"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/normal_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/center_guideline"
                    app:layout_constraintStart_toEndOf="@+id/iv_playlist_favorite_cover" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_playlist_favorite_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="2dp"
                    android:text="@string/no_track"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toEndOf="@+id/iv_playlist_favorite_cover"
                    app:layout_constraintTop_toTopOf="@+id/center_guideline" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_forward"
                    android:translationZ="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_to_favorite"
                    app:layout_constraintEnd_toEndOf="@+id/btn_to_favorite"
                    app:layout_constraintTop_toTopOf="@+id/btn_to_favorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.internal.BaselineLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="16dp"
                android:alpha="0.25"
                android:background="@color/divider" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_recent_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/recent_playlist"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recent_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_recent_play"
                tools:ignore="RtlSymmetry"
                tools:listitem="@layout/item_recent_play" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/my_playlist"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_playlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                android:paddingHorizontal="16dp"
                tools:listitem="@layout/item_playlist" />
        </LinearLayout>

    </ScrollView>

</layout>